Spillover: Add spillover functionality
